<resources>
    <string name="app_name">Finance</string>
    <string name="kurs">Введите курс обмена $</string>
    <string name="summa">Введите сумму</string>
    <string name="result">Результат: </string>
    <string name="summ_dol">сумма в долларах</string>
    <string name="dol_rub">1 USD = RUB</string>
    <string name="change">Конвертировать</string>
    <string name="gipotez">Гипотенуза</string>
    <string name="perimetr">Периметр</string>
    <string name="square">Площадь</string>
    <string name="katets">Введите катеты</string>
</resources>